# minitalk

./: CMakeLists.txt  Makefile  README.md  client.c  main.c  minitalk.h  server.c
